09931 Bootify metasfresh (100627676679): fixing another problem with the